// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-clgkop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-clgkop[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-clgkop[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-clgkop[aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  border-color: #fcfcfd;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: #4f0599;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0 0 8px 2px rgba(79,5,153,0.1);
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.1);
}

.cache-clgkop[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-clgkop[data-variant='segment']:hover,
.cache-clgkop[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-clgkop[data-variant='segment'][aria-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  background-color: #e6e9f0;
}

.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    aria-disabled="false"
    class="e16krxq01 cache-clgkop"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-cujed6 e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-clgkop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-clgkop[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-clgkop[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-clgkop[aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  border-color: #fcfcfd;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: #4f0599;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0 0 8px 2px rgba(79,5,153,0.1);
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.1);
}

.cache-clgkop[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-clgkop[data-variant='segment']:hover,
.cache-clgkop[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-clgkop[data-variant='segment'][aria-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  background-color: #e6e9f0;
}

.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    aria-disabled="true"
    class="e16krxq01 cache-clgkop"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      aria-disabled="true"
      class="cache-cujed6 e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with complex child 1`] = `
<DocumentFragment>
  .cache-clgkop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-clgkop[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-clgkop[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-clgkop[aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  border-color: #fcfcfd;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: #4f0599;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0 0 8px 2px rgba(79,5,153,0.1);
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.1);
}

.cache-clgkop[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-clgkop[data-variant='segment']:hover,
.cache-clgkop[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-clgkop[data-variant='segment'][aria-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  background-color: #e6e9f0;
}

.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="true"
    aria-disabled="true"
    class="e16krxq01 cache-clgkop"
    for="radio-choice"
  >
    true true
    <input
      aria-checked="true"
      aria-disabled="true"
      checked=""
      class="cache-cujed6 e16krxq00"
      disabled=""
      id="radio-choice"
      name="radio"
      style="pointer-events: none;"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with variant segment 1`] = `
<DocumentFragment>
  .cache-clgkop {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 1px;
  padding: 16px;
  -webkit-transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: color 0.2s,border-color 0.2s,box-shadow 0.2s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 22px;
  position: relative;
  font-weight: 500;
  cursor: pointer;
}

.cache-clgkop[aria-checked='true'] {
  cursor: auto;
  color: #4f0599;
  border-color: #4f0599;
}

.cache-clgkop[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #fcfcfd;
  pointer-events: none;
}

.cache-clgkop[aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  border-color: #fcfcfd;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: #4f0599;
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):hover {
  box-shadow: 0 0 8px 2px rgba(79,5,153,0.1);
}

.cache-clgkop:not([aria-checked='true']):not([aria-disabled='true']):focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.1);
}

.cache-clgkop[data-variant='segment'] {
  font-size: 14;
  height: 40px;
  -webkit-transition: none;
  transition: none;
  border-radius: 4px;
  box-shadow: none;
  border-color: transparent;
  color: #4a4f62;
}

.cache-clgkop[data-variant='segment']:hover,
.cache-clgkop[data-variant='segment']:focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-clgkop[data-variant='segment'][aria-checked='true'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-clgkop[data-variant='segment'][aria-disabled='true'][aria-checked='true'] {
  color: #c4c9d6;
  background-color: #e6e9f0;
}

.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):hover,
.cache-clgkop[data-variant='segment']:not([aria-checked='true']):not([aria-disabled='true']):focus {
  border-color: transparent;
  box-shadow: none;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

<label
    aria-checked="false"
    aria-disabled="false"
    class="e16krxq01 cache-clgkop"
    data-variant="segment"
    for="radio-choice"
  >
    Choice
    <input
      aria-checked="false"
      class="cache-cujed6 e16krxq00"
      id="radio-choice"
      name="radio"
      tabindex="0"
      type="radio"
      value="choice"
    />
  </label>
</DocumentFragment>
`;
